fixed to have scrollbar in outer div

--- a/userfeedback.css
+++ b/userfeedback.css
@@ -109,8 +109,6 @@ body {
     padding: 20px;
     overflow: visible;
     padding: 20px;
-    overflow-y: scroll;
-    height: 500px;
 }
 
 .feedback-box{
